@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.81 2007-09-18 11:28:50 cmatsuoka Exp $
+$Id: ChangeLog,v 1.82 2007-09-18 11:46:33 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -8,6 +8,7 @@ Stable versions
 	- removed reverse-endian sample reading options and XMP_CTL_BIGEND
 	- fixed semantics of options --big-endian and --little-endian
 	- fixed memory corruption in Quadra Composer module loader
+	- fixed Quadra Composer effects
 	- prowizard code cleanup
 
 2.2.1 (20070917)
